LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=10472
          REGRESSION: "add" method of <select> object does not put the <option> object in the correct position

        * fast/dom/HTMLSelectElement/options-collection-detached-expected.txt: Added.
        * fast/dom/HTMLSelectElement/options-collection-detached.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=10472
          REGRESSION: "add" method of <select> object does not put the <option> object in the correct position

        Test: fast/dom/HTMLSelectElement/options-collection-detached.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::setRecalcListItems): Reset the options collection
        info if the <select> is not in the document. For in-document <select>s this
        happens anyway as a result of the DOM tree version increasing.



Canonical link: https://commits.webkit.org/15987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19011 268f45cc-cd09-0410-ab3c-d52691b4dbfc